button alignment fix

--- a/src/css/modules/button.scss
+++ b/src/css/modules/button.scss
@@ -4,6 +4,7 @@
   max-width: 207px;
   width: 100%;
   display: inline-flex;
+  justify-content: center;
   font-family: $font-panton-bold;
   letter-spacing: 1px;
   border-radius: 50px;
